concord_macros/tests/dsl/fail/fail_secret_exposure_method_macro_in_policy_expr.stderr
error: secret exposure methods are not allowed in public policy expressions
  --> tests/dsl/fail/fail_secret_exposure_method_macro_in_policy_expr.rs:11:43
   |
11 |     header "X-Leak" = format!("{}", token.expose())
   |                                           ^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_exposure_method_macro_in_policy_expr.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
